added fonts and works with single page

--- a/assets/scss/fonts/_font_outfit.scss
+++ b/assets/scss/fonts/_font_outfit.scss
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-Medium.eot');
+    src: url('../fonts/outfit/Outfit-Medium.eot');
     src: local('Outfit Medium'), local('Outfit-Medium'),
-        url('fonts/outfit/Outfit-Medium.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-Medium.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-Medium.woff') format('woff'),
-        url('fonts/outfit/Outfit-Medium.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-Medium.svg#Outfit-Medium') format('svg');
+        url('../fonts/outfit/Outfit-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-Medium.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-Medium.woff') format('woff'),
+        url('../fonts/outfit/Outfit-Medium.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-Medium.svg#Outfit-Medium') format('svg');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -14,13 +14,13 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-Regular.eot');
+    src: url('../fonts/outfit/Outfit-Regular.eot');
     src: local('Outfit Regular'), local('Outfit-Regular'),
-        url('fonts/outfit/Outfit-Regular.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-Regular.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-Regular.woff') format('woff'),
-        url('fonts/outfit/Outfit-Regular.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-Regular.svg#Outfit-Regular') format('svg');
+        url('../fonts/outfit/Outfit-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-Regular.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-Regular.woff') format('woff'),
+        url('../fonts/outfit/Outfit-Regular.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-Regular.svg#Outfit-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -28,13 +28,13 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-SemiBold.eot');
+    src: url('../fonts/outfit/Outfit-SemiBold.eot');
     src: local('Outfit SemiBold'), local('Outfit-SemiBold'),
-        url('fonts/outfit/Outfit-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-SemiBold.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-SemiBold.woff') format('woff'),
-        url('fonts/outfit/Outfit-SemiBold.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-SemiBold.svg#Outfit-SemiBold') format('svg');
+        url('../fonts/outfit/Outfit-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-SemiBold.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-SemiBold.woff') format('woff'),
+        url('../fonts/outfit/Outfit-SemiBold.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-SemiBold.svg#Outfit-SemiBold') format('svg');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -42,13 +42,13 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-Light.eot');
+    src: url('../fonts/outfit/Outfit-Light.eot');
     src: local('Outfit Light'), local('Outfit-Light'),
-        url('fonts/outfit/Outfit-Light.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-Light.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-Light.woff') format('woff'),
-        url('fonts/outfit/Outfit-Light.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-Light.svg#Outfit-Light') format('svg');
+        url('../fonts/outfit/Outfit-Light.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-Light.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-Light.woff') format('woff'),
+        url('../fonts/outfit/Outfit-Light.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-Light.svg#Outfit-Light') format('svg');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -56,13 +56,13 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-Bold.eot');
+    src: url('../fonts/outfit/Outfit-Bold.eot');
     src: local('Outfit Bold'), local('Outfit-Bold'),
-        url('fonts/outfit/Outfit-Bold.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-Bold.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-Bold.woff') format('woff'),
-        url('fonts/outfit/Outfit-Bold.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-Bold.svg#Outfit-Bold') format('svg');
+        url('../fonts/outfit/Outfit-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-Bold.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-Bold.woff') format('woff'),
+        url('../fonts/outfit/Outfit-Bold.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-Bold.svg#Outfit-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -70,13 +70,13 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-Black.eot');
+    src: url('../fonts/outfit/Outfit-Black.eot');
     src: local('Outfit Black'), local('Outfit-Black'),
-        url('fonts/outfit/Outfit-Black.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-Black.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-Black.woff') format('woff'),
-        url('fonts/outfit/Outfit-Black.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-Black.svg#Outfit-Black') format('svg');
+        url('../fonts/outfit/Outfit-Black.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-Black.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-Black.woff') format('woff'),
+        url('../fonts/outfit/Outfit-Black.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-Black.svg#Outfit-Black') format('svg');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -84,13 +84,13 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-Thin.eot');
+    src: url('../fonts/outfit/Outfit-Thin.eot');
     src: local('Outfit Thin'), local('Outfit-Thin'),
-        url('fonts/outfit/Outfit-Thin.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-Thin.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-Thin.woff') format('woff'),
-        url('fonts/outfit/Outfit-Thin.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-Thin.svg#Outfit-Thin') format('svg');
+        url('../fonts/outfit/Outfit-Thin.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-Thin.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-Thin.woff') format('woff'),
+        url('../fonts/outfit/Outfit-Thin.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-Thin.svg#Outfit-Thin') format('svg');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -98,13 +98,13 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-ExtraLight.eot');
+    src: url('../fonts/outfit/Outfit-ExtraLight.eot');
     src: local('Outfit ExtraLight'), local('Outfit-ExtraLight'),
-        url('fonts/outfit/Outfit-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-ExtraLight.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-ExtraLight.woff') format('woff'),
-        url('fonts/outfit/Outfit-ExtraLight.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-ExtraLight.svg#Outfit-ExtraLight') format('svg');
+        url('../fonts/outfit/Outfit-ExtraLight.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-ExtraLight.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-ExtraLight.woff') format('woff'),
+        url('../fonts/outfit/Outfit-ExtraLight.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-ExtraLight.svg#Outfit-ExtraLight') format('svg');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -112,15 +112,14 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('fonts/outfit/Outfit-ExtraBold.eot');
+    src: url('../fonts/outfit/Outfit-ExtraBold.eot');
     src: local('Outfit ExtraBold'), local('Outfit-ExtraBold'),
-        url('fonts/outfit/Outfit-ExtraBold.eot?#iefix') format('embedded-opentype'),
-        url('fonts/outfit/Outfit-ExtraBold.woff2') format('woff2'),
-        url('fonts/outfit/Outfit-ExtraBold.woff') format('woff'),
-        url('fonts/outfit/Outfit-ExtraBold.ttf') format('truetype'),
-        url('fonts/outfit/Outfit-ExtraBold.svg#Outfit-ExtraBold') format('svg');
+        url('../fonts/outfit/Outfit-ExtraBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/outfit/Outfit-ExtraBold.woff2') format('woff2'),
+        url('../fonts/outfit/Outfit-ExtraBold.woff') format('woff'),
+        url('../fonts/outfit/Outfit-ExtraBold.ttf') format('truetype'),
+        url('../fonts/outfit/Outfit-ExtraBold.svg#Outfit-ExtraBold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
-
